# mempalace

./: CLAUDE.md  README.md  architecture.md  config.example.yaml  migration.md  pyproject.toml  roadmap.md
.github/workflows/: ci.yml  publish.yml
mempalace/: __init__.py  api.py  cli.py  mcp_server.py  version.py
mempalace/application/: __init__.py  context.py  conversation_discovery.py  conversation_ingestion.py  fact_extraction.py  filesystem_scan.py  ingestion.py  legacy_migration.py  ports.py  project_classification.py  project_profiles.py  reindexing.py  retrieval.py  segmentation.py
mempalace/compat/: __init__.py  _legacy_chroma.py  _legacy_config.py  _legacy_convo_miner.py  _legacy_knowledge_graph.py  _legacy_layers.py  _legacy_miner.py  _legacy_palace_graph.py  _legacy_searcher.py  cli.py  config.py  convo_miner.py  dialect.py  entity_detector.py  entity_registry.py  general_extractor.py  knowledge_graph.py  layers.py  mcp_server.py  miner.py  normalize.py  onboarding.py  palace_graph.py  room_detector_local.py  searcher.py  spellcheck.py  split_mega_files.py
mempalace/domain/: __init__.py  models.py
mempalace/infrastructure/: __init__.py  logging.py  settings.py
mempalace/infrastructure/storage/: __init__.py  sqlite_catalog.py
mempalace/infrastructure/vector/: __init__.py  factory.py  hashing.py  sentence_transformer.py  sqlite_index.py
mempalace/interfaces/: __init__.py  api.py  runtime.py
mempalace/interfaces/cli/: __init__.py  service_cli.py
mempalace/interfaces/mcp/: __init__.py  service_tools.py
tests/: conftest.py  test_convo_miner.py  test_embedding_provider.py  test_filesystem_scan.py  test_mcp_server.py  test_memory_platform.py  test_memory_settings.py  test_project_classification.py  test_project_profiles.py  test_service_cli.py  test_service_mcp.py  test_text_segmenter.py
