[project]
name = "mempalace"
version = "0.1.0"
description = "A production-oriented local-first memory platform for AI assistants and coding agents."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
    {name = "Kynguyen Pham"},
]
keywords = [
    "ai", "memory", "llm", "rag", "mcp", "sqlite",
    "vector-database", "local-first", "embeddings",
    "coding-agent", "context-manager",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Utilities",
]
dependencies = [
    "chromadb>=0.5.0,<0.7",
    "pyyaml>=6.0",
]

[project.urls]
Homepage = "https://github.com/nguyenrot/mempalace"
Repository = "https://github.com/nguyenrot/mempalace"
"Bug Tracker" = "https://github.com/nguyenrot/mempalace/issues"

[project.scripts]
mempalace = "mempalace:main"

[project.optional-dependencies]
dev = ["pytest>=7.0", "ruff>=0.4.0"]
spellcheck = ["autocorrect>=2.0"]

[dependency-groups]
dev = ["pytest>=7.0", "ruff>=0.4.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["mempalace"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"

[tool.pytest.ini_options]
testpaths = ["tests"]
