[project]
name = "mempalace"
version = "0.1.0"
description = "A local-first memory platform for AI assistants and coding agents with persistent retrieval, provenance, and MCP tooling."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
    {name = "phamkynguyen", email = "phamkynguyen753@gmail.com"},
]
keywords = [
    "ai", "memory", "llm", "rag", "mcp", "sqlite",
    "vector-database", "local-first", "embeddings",
    "coding-agent", "context-manager",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Utilities",
]
dependencies = [
    "chromadb>=0.5.0,<0.7",
    "pyyaml>=6.0",
]

[project.urls]
Homepage = "https://github.com/phamkynguyen/mempalace"
Repository = "https://github.com/phamkynguyen/mempalace"
"Bug Tracker" = "https://github.com/phamkynguyen/mempalace/issues"

[project.scripts]
mempalace = "mempalace:main"

[project.optional-dependencies]
dev = ["pytest>=7.0", "ruff>=0.4.0"]
spellcheck = ["autocorrect>=2.0"]

[dependency-groups]
dev = ["pytest>=7.0", "ruff>=0.4.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["mempalace"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"

[tool.pytest.ini_options]
testpaths = ["tests"]
